# RustChat

backend/: Cargo.toml
backend/src/: main.rs
backend/src/controller/: auth_controller.rs  message_controller.rs  mod.rs  room_controller.rs  user_controller.rs
backend/src/middleware/: auth_middleware.rs  mod.rs  room_middleware.rs
backend/src/models/: message_model.rs  mod.rs  room_model.rs  user_model.rs
backend/src/routes/: router.rs
backend/src/utils/: db.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: login.tsx  register.tsx
frontend/src/components/chat/: Navbar.tsx  RecentChats.tsx  ShowChats.tsx
frontend/src/context/: authContext.tsx
frontend/src/pages/: Auth.tsx  Chat.tsx
