[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
bcrypt = "0.17.0"
bson = "2.15.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.2.4"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
